更新依赖配置与驱动配置，使代码在高版本MySQL等本地应用环境下可以运行